# reverie

./: .env  Cargo.toml
migrations/: 20241118214242_create_authors_table.sql  20241119000558_create_logs_table.sql  20241119154119_create_tbl_author.sql  20241119154125_create_tbl_project.sql  20241119154136_create_tbl_logs.sql  20241119155503_insert_defaults.sql
src/: cli.rs  lib.rs  main.rs  srv.rs
src/adapters/: conf.rs  envconf.rs  mod.rs  sqlite.rs
src/core/: mod.rs  model.rs  pagination.rs  repo.rs  service.rs
tests/: cli.rs
