[package]
name = "back"
version = "0.1.0"
edition = "2021"

[[bin]]
name="main"
path="src/main.rs"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
home = "0.5.9"
itertools = "0.13.0"
serde = { version = "1.0.215", features= ["derive"]}
serde_cbor = "0.11.2"
serde_json = "1.0.132"
tracing = { version = "0.1.40", features = ["attributes"]}
tracing-subscriber = "0.3.18"

[dev-dependencies]
assert_cmd = "2.0.16"

