[package]
name = "back"
version = "0.1.0"
edition = "2021"

[[bin]]
name="cli"
path="src/cli.rs"

[[bin]]
name="srv"
path="src/srv.rs"

[dependencies]
anyhow = "1.0.93"
axum = "0.7.7"
axum-macros = "0.4.2"
axum-server = "0.7.1"
clap = { version = "4.5.20", features = ["derive"] }
home = "0.5.9"
itertools = "0.13.0"
serde = { version = "1.0.215", features= ["derive"]}
serde_cbor = "0.11.2"
serde_json = "1.0.132"
sqlx = { version = "0.8.2", features = ["sqlite"] }
tokio = { version = "1.41.1", features = ["full"]}
tracing = { version = "0.1.40", features = ["attributes"]}
tracing-subscriber = "0.3.18"
uuid = { version = "1.11.0", features = ["v7"] }

[dev-dependencies]
assert_cmd = "2.0.16"

[features]
default = ["dtos", "sqlx"]
dtos = []
sqlx = []
